# INSTÂNCIA DE REFERÊNCIA: Compilador MiniPar → ARMv7
# Framework: AbstractBackendTranslator (base_translator.py)
# Hotspots implementados neste arquivo: emit(), finalize()
# O dev desta aplicação escolheu: TAC → Assembly ARMv7

"""Back-end ARMv7 — TAC → assembly mínimo."""

from __future__ import annotations

from typing import List

from minipar_core.translation.base_translator import (
    AbstractBackendTranslator,
    TranslationResult,
)
from minipar_core.translation.tac import TAC
from minipar_core.translation.tac_codegen import TACGenerator


class SimpleARMGenerator:
    def generate(self, instructions: List[TAC]) -> str:
        lines = [
            "/* Generated by MiniPar ms-codegen-arm (Fase 2) — ARMv7 MVP */",
            "    .text",
            "    .global main",
            "    .align 2",
            "",
            "main:",
            "    push {fp, lr}",
            "    mov fp, sp",
        ]
        strings: dict[str, str] = {}
        sid = 0

        for instr in instructions:
            if instr.op == "PRINT" and isinstance(instr.arg1, str):
                if instr.arg1.startswith('"'):
                    # String literal — load address into r0 and call printf
                    raw = instr.arg1[1:-1]
                    label = f".Lstr{sid}"
                    newline = instr.arg2 == "1"
                    strings[label] = raw + "\\n" if newline else raw
                    sid += 1
                    lines.append(f"    ldr r0, ={label}")
                    lines.append("    bl printf")
                else:
                    # Numeric variable — C1 fix: emit printf with %g\n format
                    # ARM MVP: register allocation not implemented;
                    # emit structurally valid printf call with format string placeholder
                    fmt_label = f".Lfmt{sid}"
                    newline = instr.arg2 == "1"
                    strings[fmt_label] = "%g\\n" if newline else "%g"
                    sid += 1
                    lines.append(f"    @ load {instr.arg1} into r1 (register allocation needed)")
                    lines.append(f"    ldr r0, ={fmt_label}")
                    lines.append("    bl printf")

        lines.extend(
            [
                "    mov r0, #0",
                "    pop {fp, lr}",
                "    bx lr",
                "",
            ]
        )

        if strings:
            lines.append("    .section .rodata")
            for label, text in strings.items():
                esc = text.replace("\\", "\\\\").replace('"', '\\"')
                lines.append(f"{label}:")
                # Use .asciz for null-terminated strings; handle \\n escape properly
                lines.append(f'    .asciz "{esc}"')
            lines.append("")

        lines.append("    .end")
        return "\n".join(lines)


class ARMBackend(AbstractBackendTranslator):
    def __init__(self) -> None:
        self._code = ""

    def emit(self, ast_dict: dict) -> None:
        tac = TACGenerator().lower(ast_dict)
        self._code = SimpleARMGenerator().generate(tac)

    def finalize(self) -> TranslationResult:
        msg = "Assembly ARMv7 gerado."
        if not self._has_arm_toolchain():
            msg += " Toolchain ARM (arm-linux-gnueabihf-gcc) não encontrada — assembly disponível em code."
        return TranslationResult(output=msg, code=self._code, exit_code=0)

    @staticmethod
    def _has_arm_toolchain() -> bool:
        import subprocess

        for cmd in ("arm-linux-gnueabihf-gcc", "arm-none-eabi-gcc"):
            try:
                subprocess.run([cmd, "--version"], capture_output=True, check=False)
                return True
            except FileNotFoundError:
                continue
        return False


def generate_arm(ast_dict: dict) -> TranslationResult:
    return ARMBackend().translate(ast_dict)
