# INSTÂNCIA DE REFERÊNCIA: Compilador MiniPar → Rust
# Framework: AbstractBackendTranslator (base_translator.py)
# Hotspots implementados neste arquivo: emit(), finalize()
# O dev desta aplicação escolheu: AST → Rust → rustc

"""Back-end Rust — emissao direta da AST via RustASTEmitter."""

from __future__ import annotations

import subprocess
import tempfile
import uuid
from pathlib import Path
from typing import Dict, List, Optional, Set

from minipar_core import ast_nodes as n
from minipar_core.translation.base_translator import (
    AbstractBackendTranslator,
    TranslationResult,
)


class RustASTEmitter:
    """Emite codigo Rust valido percorrendo a AST diretamente (sem TAC)."""

    def __init__(self) -> None:
        self._lines: List[str] = []
        self._structs: Dict[str, List[str]] = {}   # cls -> [field_names]
        self._fn_sigs: Dict[str, str] = {}          # fn_key -> assinatura
        self._fn_bodies: Dict[str, List[str]] = {}  # fn_key -> linhas do corpo
        self._returns_f64: Set[str] = set()          # funcoes que retornam f64
        self._current_cls: Optional[str] = None
        self._current_fn: Optional[str] = None
        self._temp_count: int = 0

    def _tmp(self) -> str:
        name = f"_t{self._temp_count}"
        self._temp_count += 1
        return name

    def emit(self, program: n.Program) -> str:
        # Pre-passo 1: coletar campos das classes (para structs)
        for decl in program.declarations:
            if isinstance(decl, n.ClassDecl):
                fields = [m.name for m in decl.members if isinstance(m, n.VarDecl)]
                self._structs[decl.name] = fields

        # Pre-passo 2: detectar funcoes que retornam valor
        for decl in program.declarations:
            if isinstance(decl, n.ClassDecl):
                for m in decl.members:
                    if isinstance(m, n.MethodDecl):
                        key = f"{decl.name}_{m.name}"
                        if self._has_return_value(m.body):
                            self._returns_f64.add(key)

        # Emitir structs
        out: List[str] = ["// Generated by MiniPar RustASTEmitter", "#![allow(unused_mut, unused_parens)]", ""]
        for cls, fields in self._structs.items():
            out.append("#[derive(Debug, Default, Clone)]")
            out.append(f"pub struct {cls} {{")
            for f in fields:
                out.append(f"    pub {f}: f64,")
            if not fields:
                out.append("    _tag: i32,")
            out.append("}")
            out.append(f"impl {cls} {{")
            out.append(f"    pub fn new() -> Self {{ Self::default() }}")
            out.append("}")
            out.append("")

        # Emitir funcoes livres (fn ClassName_method)
        for decl in program.declarations:
            if isinstance(decl, n.ClassDecl):
                self._current_cls = decl.name
                for m in decl.members:
                    if isinstance(m, n.MethodDecl):
                        fn_lines = self._emit_method(decl.name, m)
                        out.extend(fn_lines)
                        out.append("")

        # fn main()
        out.append("fn main() {")
        main_cls = next(
            (d.name for d in program.declarations
             if isinstance(d, n.ClassDecl) and d.name == "Main"), None
        )
        if main_cls:
            run_fn = self._fn_name(main_cls, "run")
            out.append(f"    let mut _main = {main_cls}::new();")
            out.append(f"    {run_fn}(&mut _main);")
        out.append("}")
        return "\n".join(out)

    @staticmethod
    def _fn_name(cls: str, method: str) -> str:
        """Gera nome de funcao em snake_case: Main_fib -> main_fib."""
        return f"{cls}_{method}".lower()

    def _emit_method(self, cls: str, method: n.MethodDecl) -> List[str]:
        key = f"{cls}_{method.name}"
        fn_name = self._fn_name(cls, method.name)
        params_str = ", ".join(f"{p.name}: f64" for p in method.parameters)
        self_param = f"this: &mut {cls}"
        all_params = f"{self_param}, {params_str}" if params_str else self_param
        ret = " -> f64" if key in self._returns_f64 else ""

        lines: List[str] = [f"fn {fn_name}({all_params}){ret} {{"]
        body: List[str] = []
        self._emit_stmt(method.body, body, depth=1, cls=cls)
        lines.extend(body)
        lines.append("}")
        return lines

    def _emit_stmt(self, node, out: List[str], depth: int, cls: str) -> None:
        pad = "    " * depth

        if isinstance(node, n.Block):
            for s in node.statements:
                self._emit_stmt(s, out, depth, cls)

        elif isinstance(node, n.VarDecl):
            if node.initializer:
                val = self._emit_expr(node.initializer, cls)
                if isinstance(node.initializer, n.NewInstance):
                    out.append(f"{pad}let mut {node.name} = {val};")
                elif isinstance(node.initializer, n.StringLiteral):
                    out.append(f"{pad}let mut {node.name} = String::from({val});")
                else:
                    out.append(f"{pad}let mut {node.name}: f64 = {val};")
            else:
                out.append(f"{pad}let mut {node.name}: f64 = 0.0;")

        elif isinstance(node, n.Assignment):
            val = self._emit_expr(node.value, cls)
            out.append(f"{pad}{node.name} = {val};")

        elif isinstance(node, n.PropertyAssign):
            recv = self._emit_expr(node.receiver, cls)
            val = self._emit_expr(node.value, cls)
            out.append(f"{pad}{recv}.{node.property_name} = {val} as f64;")

        elif isinstance(node, n.PrintStmt):
            parts = [self._emit_expr(a, cls) for a in node.arguments]
            if len(parts) == 1:
                p = parts[0]
                if node.newline:
                    out.append(f'{pad}println!("{{}}", {p});')
                else:
                    out.append(f'{pad}print!("{{}}", {p});')
            else:
                # Multiplos argumentos: concatenar
                concat = " + &".join(f'format!("{{}}", {p})' for p in parts)
                macro = "println" if node.newline else "print"
                out.append(f'{pad}{macro}!("{{}}", {concat});')

        elif isinstance(node, n.IfStmt):
            cond = self._emit_expr(node.condition, cls)
            out.append(f"{pad}if ({cond}) != 0.0 {{")
            self._emit_stmt(node.then_branch, out, depth + 1, cls)
            if node.else_branch:
                out.append(f"{pad}}} else {{")
                self._emit_stmt(node.else_branch, out, depth + 1, cls)
            out.append(f"{pad}}}")

        elif isinstance(node, n.WhileStmt):
            cond = self._emit_expr(node.condition, cls)
            tmp = self._tmp()
            out.append(f"{pad}loop {{")
            out.append(f"{pad}    let {tmp}: f64 = {cond};")
            out.append(f"{pad}    if ({tmp}) == 0.0 {{ break; }}")
            self._emit_stmt(node.body, out, depth + 1, cls)
            out.append(f"{pad}}}")

        elif isinstance(node, n.ReturnStmt):
            if node.value:
                val = self._emit_expr(node.value, cls)
                out.append(f"{pad}return {val} as f64;")
            else:
                out.append(f"{pad}return;")

        elif isinstance(node, n.BreakStmt):
            out.append(f"{pad}break;")

        elif isinstance(node, n.ContinueStmt):
            out.append(f"{pad}continue;")

        elif isinstance(node, n.ExprStmt):
            # Assignment in expression context: emit as statement directly
            if isinstance(node.expression, n.Assignment):
                self._emit_stmt(node.expression, out, depth, cls)
            else:
                expr = self._emit_expr(node.expression, cls)
                if expr and not expr.startswith("//"):
                    out.append(f"{pad}{expr};")

        elif isinstance(node, n.SeqBlock):
            for s in node.statements:
                self._emit_stmt(s, out, depth, cls)

        # Nos ignorados (par, channel, send, receive — MVP)
        elif isinstance(node, (n.ParBlock, n.ChannelDecl, n.SendStmt, n.ReceiveStmt)):
            out.append(f"{pad}// {type(node).__name__} — MVP nao implementado em Rust")

    def _emit_expr(self, node, cls: str) -> str:
        if isinstance(node, n.NumberLiteral):
            v = node.value
            return f"{int(v)}.0_f64" if v == int(v) else f"{v}_f64"

        if isinstance(node, n.StringLiteral):
            esc = node.value.replace("\\", "\\\\").replace('"', '\\"')
            return f'"{esc}"'

        if isinstance(node, n.BoolLiteral):
            return "1.0_f64" if node.value else "0.0_f64"

        if isinstance(node, n.Variable):
            return node.name

        if isinstance(node, n.ThisExpr):
            return "this"

        if isinstance(node, n.BinaryOp):
            left = self._emit_expr(node.left, cls)
            right = self._emit_expr(node.right, cls)
            op = node.operator
            # Operadores relacionais retornam f64 (1.0 ou 0.0)
            if op in ("<", ">", "<=", ">=", "==", "!="):
                return f"(if {left} as f64 {op} {right} as f64 {{ 1.0_f64 }} else {{ 0.0_f64 }})"
            return f"({left} as f64) {op} ({right} as f64)"

        if isinstance(node, n.UnaryOp):
            operand = self._emit_expr(node.operand, cls)
            if node.operator == "-":
                return f"-({operand} as f64)"
            if node.operator == "!":
                return f"(if ({operand} as f64) == 0.0 {{ 1.0_f64 }} else {{ 0.0_f64 }})"

        if isinstance(node, n.MethodCall):
            recv = self._emit_expr(node.receiver, cls)
            # Emitir cada argumento sem parênteses extras desnecessários
            raw_args = [self._emit_expr(a, cls) for a in node.arguments]
            args = ", ".join(raw_args)
            # Determinar a classe do receptor (simplificacao: usar cls atual para this)
            recv_cls = cls if recv == "this" else "Object"
            key = f"{recv_cls}_{node.method}"
            fn_name = self._fn_name(recv_cls, node.method)
            args_full = f"{recv}, {args}" if args else recv
            return f"{fn_name}({args_full})"

        if isinstance(node, n.NewInstance):
            return f"{node.class_name}::new()"

        if isinstance(node, n.PropertyAccess):
            recv = self._emit_expr(node.receiver, cls)
            return f"{recv}.{node.property_name}"

        if isinstance(node, n.FuncCall):
            args = ", ".join(self._emit_expr(a, cls) for a in node.arguments)
            return f"{node.name}({args})"

        if isinstance(node, n.Assignment):
            val = self._emit_expr(node.value, cls)
            return f"{{ {node.name} = {val}; {node.name} }}"

        return "0.0_f64  /* expr nao suportada */"

    def _has_return_value(self, node) -> bool:
        """Verifica recursivamente se o bloco contem ReturnStmt com valor."""
        if isinstance(node, n.ReturnStmt):
            return node.value is not None
        for attr in (vars(node).values() if hasattr(node, "__dict__") else []):
            if isinstance(attr, list):
                if any(self._has_return_value(item) for item in attr
                       if hasattr(item, "__dict__")):
                    return True
            elif hasattr(attr, "__dict__"):
                if self._has_return_value(attr):
                    return True
        return False


class RustBackend(AbstractBackendTranslator):
    def __init__(self) -> None:
        self._code: str = ""

    def emit(self, ast_dict: dict) -> None:
        """Hotspot: AST -> Rust via RustASTEmitter (sem TAC)."""
        from minipar_core.translation.ast_from_json import from_dict
        program = from_dict(ast_dict)
        emitter = RustASTEmitter()
        self._code = emitter.emit(program)

    def finalize(self) -> TranslationResult:
        result = self._try_build(self._code)
        return TranslationResult(
            output=result["output"],
            code=self._code,
            exit_code=result["exit_code"],
        )

    def _try_build(self, code: str) -> dict:
        if not self._has_rustc():
            return {
                "output": "Rust code generated. rustc nao encontrado — instale Rust toolchain para compilar.",
                "exit_code": 0,
            }
        work = Path(tempfile.gettempdir()) / f"minipar-rust-{uuid.uuid4().hex[:8]}"
        work.mkdir(parents=True, exist_ok=True)
        rs_file = work / "main.rs"
        exe = work / "main"
        try:
            rs_file.write_text(code, encoding="utf-8")
            comp = subprocess.run(
                ["rustc", str(rs_file), "-O", "-o", str(exe)],
                capture_output=True,
                text=True,
                check=False,
            )
            if comp.returncode != 0:
                return {
                    "output": f"rustc failed:\n{comp.stderr or comp.stdout}",
                    "exit_code": comp.returncode,
                }
            run = subprocess.run(
                [str(exe)], capture_output=True, text=True, check=False, timeout=30
            )
            stdout = run.stdout or ""
            stderr = run.stderr or ""
            log = "Compiled with rustc -O\n"
            if stdout:
                log += stdout
            if stderr:
                log += stderr
            return {"output": log, "exit_code": run.returncode}
        finally:
            for p in (rs_file, exe):
                try:
                    p.unlink(missing_ok=True)
                except OSError:
                    pass
            try:
                work.rmdir()
            except OSError:
                pass

    @staticmethod
    def _has_rustc() -> bool:
        try:
            proc = subprocess.run(
                ["rustc", "--version"],
                capture_output=True,
                check=False,
            )
            return proc.returncode == 0
        except FileNotFoundError:
            return False


def generate_rust(ast_dict: dict) -> TranslationResult:
    return RustBackend().translate(ast_dict)
